added fetch workspace by id. added loding spinner.

--- a/src/Components/MyCustomModal/MyCustomModal.css
+++ b/src/Components/MyCustomModal/MyCustomModal.css
@@ -19,7 +19,7 @@
     border-radius: 12px; /* Slightly larger radius for a softer look */
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); /* Softer shadow for a more modern feel */
     padding: 3rem; /* Increased padding for more space inside the modal */
-    width: 50%; /* Adjust width as needed to fit your content */
+    width: 90%; /* Adjust width as needed to fit your content */
     max-width: 640px; /* Maximum width to ensure it doesn't get too large on wide screens */
 }
 
@@ -41,6 +41,10 @@
     border-radius: 8px; /* Rounded corners for each item */
     cursor: pointer; /* Change cursor to indicate clickable items */
     transition: background-color 0.3s ease; /* Smooth transition for hover effect */
+    font-family: 'Roboto:ital';
+    font-size: 17px;
+    letter-spacing: 1px;
+    font-weight: 300;
 }
 
 .custom-modal__content li:hover {
@@ -49,4 +53,29 @@
 
 .custom-modal__button {
     width: 100%; /* Adjust width to fit content */
+}
+
+.spinner {
+    border: 4px solid rgba(0, 0, 0, 0.1);
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    border-left-color: #09f;
+    animation: spin 1s ease infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.spinner-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 2rem;
 }
