separation of concerns. created a useViewModel

--- a/src/Components/MyCustomModal/MyCustomModal.css
+++ b/src/Components/MyCustomModal/MyCustomModal.css
@@ -86,8 +86,10 @@
 
 .register-title {
     color: rgb(0, 0, 0);
+    font-size: 19px;
 }
 
 .register-subtitle {
     color: rgb(99, 99, 99);
+    font-size: 13px;
 }
