ui improvement in home

--- a/src/Components/FooterBar/FooterBar.css
+++ b/src/Components/FooterBar/FooterBar.css
@@ -1,7 +1,7 @@
 
 .footer-bar {
     width: 100%;
-    background-color: rgb(96, 164, 209);
+    background-color: #cacaca;
     color: rgb(0, 0, 0); /* Light text color */
     text-align: right;
     padding: 0.7rem 0.7rem; /* Some padding for spacing */
