--- a/src/Components/Spinner/spinner.css
+++ b/src/Components/Spinner/spinner.css
@@ -1,20 +1,15 @@
 /* Spinner.css */
 .spinner-wrapper {
-    position: absolute; /* Fixed relative to the viewport */
-    top: 0;
-    left: 0;
-    width: 100vw; /* 100% of the viewport width */
-    height: 100vh; /* 100% of the viewport height */
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 0;
 }
-
 
 .spinner {
     border: 4px solid rgba(0, 0, 0, 0.1);
-    width: 36px;
-    height: 36px;
+    width: 56px;
+    height: 56px;
     border-radius: 50%;
     border-left-color: #09f;
     animation: spin 1s ease infinite;
