--- a/src/Components/InputViews/TextInputView.css
+++ b/src/Components/InputViews/TextInputView.css
@@ -1,20 +1,19 @@
-.main {
-  margin-bottom: 2rem;
+.title {
+   font-size: 14px;
+   margin: 0rem; /* Explicitly remove margin from <p> */
+   font-weight: 700;
 }
-.main p {
-    font-size: 14px;
-    margin: 0rem; /* Explicitly remove margin from <p> */
-  }
-  
-  .inputField {
-    padding: 1rem 1rem;
-    width: 100%;
-    font-size: 17px;
-  }
-  
-  .errorMessage {
-    color: red;
-    margin-top: 0;
-  }
 
-  
+.inputField {
+   padding: 1rem 1rem;
+   width: 100%;
+   font-size: 17px;
+   border: none;
+   border-radius: 0.5rem;
+}
+
+.errorMessage {
+   color: red;
+   margin-top: 0;
+   font-size: 14px;
+}
