--- a/src/Pages/Login/LoginView.css
+++ b/src/Pages/Login/LoginView.css
@@ -1,33 +1,43 @@
 .login__main {
-    background-color: var(--primary);
-    color: var(--blanco);
-    display: flex;
-    width: 100%;
-    justify-content: center;
-    align-items: flex-start; /* Align items vertically to the top, preventing its element not to stretch like this main element. */
-    flex-grow: 1;
-    height: 100vh;
-}
-
-.margin-top {
-     margin-top: 3rem;
+   background-image: linear-gradient(to top, rgb(23, 38, 122) 0%, black 100%);
+   color: var(--blanco);
+   display: flex;
+   width: 100%;
+   justify-content: center;
+   align-items: flex-start; /* Align items vertically to the top, preventing its element not to stretch like this main element. */
+   flex-grow: 1;
+   height: 100vh;
 }
 
 .login__container {
-     border: 1px solid black;
-     padding: 3rem 6rem;
-     background-color: var(--white);
-     border-radius: 0.5rem;
-     width: 90%;
-     max-width: 50rem;
-   }
+   border: none;
+   padding: 1rem 3rem;
+   background-color: var(--white);
+   border-radius: 0.5rem;
+   width: min(50rem, 90%);
+   margin-top: 5rem;
+}
+@media (min-width: 480px) {
+     .login__container {
+           padding: 3rem 6rem;
+     }
+}
 
 .button-login-container {
-    
 }
 
 .button-login {
-     width: 100%;
-     padding: 1rem;
-     font-size: 19px;
+   width: 100% !important;
+   padding: 1rem;
+   font-size: 17px !important;
+   margin-top: 3rem;
+}
+
+.login__container h1 {
+   margin-bottom: 2rem;
+   text-align: center;
+}
+
+.login__fields_gap {
+     margin-bottom: 2rem;
 }
