--- a/src/Components/BoxItem/BoxItem.css
+++ b/src/Components/BoxItem/BoxItem.css
@@ -1,8 +1,9 @@
 .box_item__container {
+   user-select: none;
    display: flex;
    flex-direction: column;
    background-color: whitesmoke;
-   padding: 1rem;
+   padding: 3rem 1rem;
    gap: 1rem;
 }
 
@@ -16,15 +17,25 @@
    gap: 1rem;
 }
 
+.whole-cell {
+   display: flex;
+   gap: 1rem;
+}
+
 .box_item__container-list-cell {
    display: grid;
-   grid-template-columns: 7fr 1fr 1fr 1fr 1fr; /* Ajusta los valores según necesites */
+   grid-template-columns: minmax(0, 4fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr); /* Ajusta los valores según necesites */
    align-items: center; /* Alinea los ítems al centro verticalmente */
    gap: 5px; /* Espacio entre los elementos de la cuadrícula */
+   align-items: baseline;
+   width: 100%;
 }
 
 .box_item__container-list-cell-buttons {
-   justify-content: right;
+   display: flex;
+   cursor: pointer;
+   align-items: center;
+   justify-content: center;
 }
 
 .input {
@@ -34,21 +45,25 @@
   font-size: 13px;
 }
 
-.box_item__container-list-cell-buttons {
-   display: flex;
-   justify-self: end; /* Alinea el grupo de botones a la derecha */
-   cursor: pointer;
-}
 
 .redButton {
    fill: red;
 }
 
-.blueButton {
-   fill: blue;
-}
-
 .center {
    text-align: center;
    justify-content: center;
+}
+
+.error-message {
+   color: red;
+}
+
+.box_item__container-list-cell-input {
+   display: flex;
+   flex-direction: column;
+}
+
+.non-electable {
+   user-select: none;
 }
