--- a/src/Components/InputFieldColumn/InputFieldColumn.css
+++ b/src/Components/InputFieldColumn/InputFieldColumn.css
@@ -13,8 +13,11 @@
    border: 1px solid rgb(187, 187, 187);
    height: 3rem;
    font-size: 13px;
+   display: flex;
+   align-items: center;
 }
 
-.input_field_column__scrollable {
-  
+.option {
+   display: flex;
+   width: 100%;
 }
