--- a/src/Components/InputFieldColumn/InputFieldColumn.css
+++ b/src/Components/InputFieldColumn/InputFieldColumn.css
@@ -8,7 +8,7 @@
    overflow: auto
 }
 
-.input {
+.input_field_column__input {
    /* Estilos para tus inputs si es necesario */
    border: 1px solid rgb(187, 187, 187);
    height: 3rem;
@@ -20,6 +20,6 @@
    box-sizing: border-box;
 }
 
-.borderless {
+.input_field_column__borderless {
    border: none;
 }
