--- a/src/Components/InputFieldColumn/InputFieldColumn.css
+++ b/src/Components/InputFieldColumn/InputFieldColumn.css
@@ -1,23 +1,26 @@
-.input_field_column__container {
+.input_field_column__main {
    user-select: none;
    display: flex;
    flex-direction: column;
    background-color: whitesmoke;
-   padding: 1rem 1rem;
-   gap: 1rem;
-   overflow: auto
+   padding: 2rem;
+   gap: 2rem;
+}
+
+.input_field_column__container {
+   overflow: auto;
 }
 
 .input_field_column__input {
    /* Estilos para tus inputs si es necesario */
-   border: 1px solid rgb(187, 187, 187);
+   border: 1px solid rgb(180, 180, 180);
    height: 3rem;
    font-size: 13px;
    display: flex;
-   align-items: center;
-
+ 
    width: 100%;
    box-sizing: border-box;
+   margin-bottom: 2rem;
 }
 
 .input_field_column__borderless {
