--- a/src/Components/InputFieldColumn/InputFieldColumn.css
+++ b/src/Components/InputFieldColumn/InputFieldColumn.css
@@ -5,6 +5,7 @@
    background-color: whitesmoke;
    padding: 2rem;
    gap: 2rem;
+   border-radius: 4px;
 }
 
 .input_field_column__container {
@@ -12,9 +13,17 @@
    display: flex;
    flex-direction: column;
    gap: 1rem;
-
+   font-size: 13px;
 }
 
 .input_field_column__trash-button {
    fill: red;
+ }
+
+ .input_field_column__move-right {
+   display: flex;
+   justify-content: end;
+   align-items: baseline;
+   margin-right: 3rem;
+   gap: 1rem;
  }
