--- a/src/Components/InputFieldColumn/InputFieldColumn.css
+++ b/src/Components/InputFieldColumn/InputFieldColumn.css
@@ -3,9 +3,14 @@
    display: flex;
    flex-direction: column;
    background-color: whitesmoke;
-   padding: 2rem;
-   gap: 2rem;
+   padding: 1rem;
+   gap: 0.5rem;
    border-radius: 4px;
+}
+
+.input_field_column__title {
+   color: gray;
+   font-size: 17px;
 }
 
 .input_field_column__container {
