--- a/src/Pages/Purchase/PurchaseView.css
+++ b/src/Pages/Purchase/PurchaseView.css
@@ -4,13 +4,14 @@
     height: 100%;
     background-color: rgb(205, 223, 227);
     overflow: scroll;
-    padding: 2rem;
+    padding: 1rem;
 }
 
 .purchase_view__form-title {
-   font-size: 14px;
+   font-size: 17px;
+   margin-left: 1rem;
    margin-bottom: 0.5rem; /* Explicitly remove margin from <p> */
-   font-weight: 700;
+   font-weight: 400;
 }
 
 .purchase_view__gap {
@@ -52,8 +53,10 @@
    border-radius: 4px;
    width: 20rem;
    text-align: end;
+   font-size: 17px;
 }
 
 .purchase_view__add-button {
    width: 10rem;
+   font-size: 17px !important;
 }
