added error handling in ui. created a modal for creare order

--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,21 @@ html {
 *:after {
     box-sizing: inherit;
 }
+
+.alert-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    
+    background-color: rgba(0, 0, 0, 0.85);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  
+    /* Or any other width you prefer */
+    z-index: 1500;
+    /* Ensure it's above other content, similar to a modal */
+}
