--- a/src/Components/Spinner/spinner.css
+++ b/src/Components/Spinner/spinner.css
@@ -1,9 +1,19 @@
 /* Spinner.css */
 .spinner-wrapper {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+
+    background-color: rgba(0, 0, 0, 0.6);
+
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
     margin: 0;
+    z-index: 2000;
 }
 
 .spinner {
