--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,8 @@
     --grayEven: rgb(190, 190, 190);
     --grayPair: rgb(200, 200, 200);
     --highlightBlue: rgba(41, 81, 181, 1.0);
+    --destructive: rgb(192, 18, 18);
+    --orange: rgb(213, 88, 21);
 }
 
 html {
