--- a/src/Pages/Purchase/Pay/PaymentView.css
+++ b/src/Pages/Purchase/Pay/PaymentView.css
@@ -25,7 +25,8 @@
 
 @media (min-width: 1200px) {
    .payment_view__container {
-      width: 80%;
+      width: 50%;
+      height: 90%;
    }
 }
 
