added new textfields

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
     --dark: #212121;
     --primary: rgb(96, 164, 209);
     --secondary: rgb(229, 226, 68);
+    --lightGray: #bbbbbb;
     --gray: #757575;
     --grayEven: rgb(190, 190, 190, 1);
     --grayPair: rgb(200, 200, 200, 1);
