--- a/src/Pages/Sales/CrudView/SaleOrderCrudView.css
+++ b/src/Pages/Sales/CrudView/SaleOrderCrudView.css
@@ -1,47 +1,47 @@
 .sale_crud_view__main {
-   position: fixed;
-   top: 0;
-   right: 0;
-   bottom: 0;
-   left: 0;
-
+   position: absolute;
    display: flex;
-   justify-content: center;
    flex-direction: column;
-   align-items: center;
-
-   background-color: red;
+   width: 100%;
+   height: 100%;
+   background-color: rgb(227, 227, 227);
 }
 
 .sale_crud_view__header {
+   display: flex;
+   justify-content: flex-end;
+   align-items: center;
    background-color: beige;
-   height: 4rem;
    width: 100%;
-
+   min-height: 4rem;
+   z-index: 2;
+   /* Ensure the header is above the body content */
 }
 
 .sale_crud_view__body {
    flex-grow: 1;
-   /* Allows the body to take up the remaining space */
+   overflow-y: auto;
+   /* Add scroll to the body content only */
+   padding: 2rem;
+   background-color: white;
+   /* Optional: for better content visibility */
 }
 
 .sale_crud_view__footer {
    display: flex;
-   /* Make footer a flex container */
    justify-content: flex-end;
-   /* Center children horizontally */
    align-items: center;
-   /* Center children vertically */
    background-color: beige;
    width: 100%;
+   min-height: 4rem;
+   z-index: 2;
+   /* Ensure the footer is above the body content */
 }
 
 .sale_crud_view__footer-buttons {
    display: flex;
    justify-content: flex-end;
-   /* Align buttons to the right within the buttons container */
    align-items: center;
-   /* Align buttons vertically within the buttons container */
    gap: 1rem;
    margin: 1rem;
 }
