--- a/src/Pages/Transfer/TransferView.css
+++ b/src/Pages/Transfer/TransferView.css
@@ -51,3 +51,12 @@
    justify-content: flex-end;
    gap: 1rem;
 }
+
+.transfer_view__total-amount-main {
+   display: flex;
+   justify-content: start;
+   gap: 1rem;
+   color: gray;
+   user-select: none;
+   margin-bottom: 2rem;
+}
