--- a/src/Pages/Purchase/CrudView/PuchaseCrudView.css
+++ b/src/Pages/Purchase/CrudView/PuchaseCrudView.css
@@ -113,3 +113,9 @@
    justify-content: space-between;
    gap: 1rem;
 }
+
+.puchase_view__space-between {
+   display: flex;
+   justify-content: space-between;
+   gap: 1rem;
+}
